@@ -133,7 +133,7 @@ namespace Mono.TextEditor.Highlighting
 					foreach (Span span in spanTree[ch]) {
 						bool mismatch = false;
 						for (int j = 1; j < span.Begin.Length; j++) {
-							if (span.Begin [j] != doc.GetCharAt (offset + j)) {
+							if (offset + j >= doc.Length || span.Begin [j] != doc.GetCharAt (offset + j)) {
 								mismatch = true;
 								break;
 							}
@@ -226,7 +226,7 @@ namespace Mono.TextEditor.Highlighting
 						foreach (Span span in spanTree[ch]) {
 							bool mismatch = false;
 							for (int j = 1; j < span.Begin.Length; j++) {
-								if (span.Begin [j] != doc.GetCharAt (offset + j)) {
+								if (offset + j >= doc.Length || span.Begin [j] != doc.GetCharAt (offset + j)) {
 									mismatch = true;
 									break;
 								}
